manifests/01-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---

apiVersion: v1
kind: Namespace
metadata:
  name: test

---

apiVersion: v1
kind: Namespace
metadata:
  name: prod
